--- a/InstagramClone/Storyboards/Base.lproj/Main.storyboard
+++ b/InstagramClone/Storyboards/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" cocoaTouchSystemColor="lightTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="sp5-vt-u2Y" kind="presentation" id="RAS-QR-5AD"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJj-cY-ggI">
                                 <rect key="frame" x="0.0" y="812" width="414" height="50"/>
@@ -96,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
+            <point key="canvasLocation" x="7857" y="3165"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="rIH-LM-uWu">
@@ -168,6 +171,9 @@
                                 <state key="normal" title="Sign Up">
                                     <color key="titleColor" cocoaTouchSystemColor="lightTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="sp5-vt-u2Y" kind="presentation" id="cQY-eP-ReB"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -202,7 +208,126 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qrc-fC-Zw5" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="952" y="139"/>
+            <point key="canvasLocation" x="8677" y="3165"/>
+        </scene>
+        <!--Discover View Controller-->
+        <scene sceneID="5Nb-lP-J8g">
+            <objects>
+                <viewController id="mZX-dY-wW8" customClass="DiscoverViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uOy-In-ixC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <viewLayoutGuide key="safeArea" id="ArR-gp-fzr"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="magnifyingglass.circle" catalog="system" selectedImage="magnifyingglass.circle.fill" id="PbH-n5-QUT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qdg-0K-OO2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7399" y="4668"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="Qyf-Aj-FQE">
+            <objects>
+                <viewController id="7i9-FD-c46" customClass="CameraViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wtN-oW-CbC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6xc-b0-3fz"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="plus.square" catalog="system" selectedImage="plus.app.fill" id="Gtr-MD-zPj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lTf-Pl-eQI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8267" y="4668"/>
+        </scene>
+        <!--Activity View Controller-->
+        <scene sceneID="Goy-7E-aVu">
+            <objects>
+                <viewController id="JnU-f3-8kb" customClass="ActivityViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GMH-iL-NI5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6dJ-Dz-cWa"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" selectedImage="heart.fill" id="4GM-AG-HkK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SJk-in-UnQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9119" y="4668"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="Qhv-Li-Cho">
+            <objects>
+                <viewController id="woa-Gj-Cj5" customClass="ProfileViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Flc-DG-vyI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="vpH-IL-pgf"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" selectedImage="person.fill" id="20k-WK-9fX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rL4-gQ-Npk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9972" y="4668"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="tBK-UI-FpA">
+            <objects>
+                <viewController id="QyJ-7g-8b8" customClass="HomeViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vsj-UX-9C5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="d4X-Xn-0tx"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="house" catalog="system" selectedImage="house.fill" springLoaded="YES" id="qxn-ue-220">
+                        <color key="badgeColor" cocoaTouchSystemColor="lightTextColor"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OOQ-wR-3Ib" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6538" y="4668"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="oX1-nh-poW">
+            <objects>
+                <tabBarController modalTransitionStyle="crossDissolve" modalPresentationStyle="fullScreen" id="sp5-vt-u2Y" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nUO-yk-pgF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="QyJ-7g-8b8" kind="relationship" relationship="viewControllers" id="nXR-03-rae"/>
+                        <segue destination="mZX-dY-wW8" kind="relationship" relationship="viewControllers" id="IGG-vG-VoY"/>
+                        <segue destination="7i9-FD-c46" kind="relationship" relationship="viewControllers" id="8NR-nR-nXb"/>
+                        <segue destination="JnU-f3-8kb" kind="relationship" relationship="viewControllers" id="Jnr-Fg-Dag"/>
+                        <segue destination="woa-Gj-Cj5" kind="relationship" relationship="viewControllers" id="22o-pw-J1C"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="49a-v6-rQs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8267" y="3938"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="cQY-eP-ReB"/>
+    </inferredMetricsTieBreakers>
+    <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="heart.fill" catalog="system" width="128" height="109"/>
+        <image name="house" catalog="system" width="128" height="110"/>
+        <image name="house.fill" catalog="system" width="128" height="106"/>
+        <image name="magnifyingglass.circle" catalog="system" width="128" height="121"/>
+        <image name="magnifyingglass.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="plus.app.fill" catalog="system" width="128" height="114"/>
+        <image name="plus.square" catalog="system" width="128" height="114"/>
+    </resources>
 </document>
